--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-大家好！我是傲娇的小羊。
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>HOME</title>
+	<!-- for-mobile-apps -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="Mungo Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);function hideURLbar(){ window.scrollTo(0,1); } </script>
+	<!-- //for-mobile-apps -->
+
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+
+	<!--fonts-->
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
+	<!--/fonts-->
+
+	<!-- js -->
+	<script src="js/jquery.min.js"> </script>
+	<script src="js/bootstrap.js"></script>
+	<!-- //js -->
+</head>
+<body>
+	<div class="header">
+		<div class="container">
+			<div class="logo">
+				<a href="#">
+				  <h1>AZIR</h1>
+				</a>
+			</div>
+			<div class="navigation_bar">
+			  <div class="bar_icon"></div>
+				<nav>
+					<ul class="nav_bar">
+						<li><a href="#home" class="scroll">HOME</a></li>
+						<li><a href="#about" class="scroll">ABOUT</a></li>
+						<li><a href="#skill" class="scroll">SKILL</a></li>
+						<li><a href="#article" class="scroll">ARTICLE</a></li>
+						<li><a href="#contact" class="scroll">CONTACT</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="search">
+				<input type="text" value="Search" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search';}">
+			  <input type="submit" value="">
+			</div>
+		</div>
+		<div class="clear"></div>
+	</div>
+  <div class="me_icon">
+  	<div class="container">
+  		<div class="me_icon_info">
+  		  <div class="me_icon_text">
+  			  <h1>AZIR CHEN</h1>
+  			  <h2>程序猿</h2>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+  <div class="about"></div>
+  <div class="skill"></div>
+  <div class="article"></div>
+  <div class="contact"></div>
+  <div class="footer"></div>
+</body>
+</html>
