--- a/index.html
+++ b/index.html
@@ -60,7 +60,93 @@
   		</div>
   	</div>
   </div>
-  <div class="about"></div>
+  <div class="about">
+  	<div class="head_text">
+  		<h2>About Me</h2>
+  		<span> </span>
+  	</div>
+  	<div class="self_intro">
+  		<div class="left_text">
+  			<h3>AZIR CHEN</h3>
+  			<span>小羊不在太平洋</span>
+  			<p>Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile. </p>
+  			<p>Everyone should take action with a dream and be strong with a reason . If the heart has no place to perch on, you will always be a drifter no matter where you are.</p>
+  		</div>
+  		<div class="right_img">
+  			<a href="#">
+  				<img src="images/cat1.jpg" alt="" title="Born to be proud">
+  			</a>
+  		</div>
+  	</div>
+  	<div class="detail">
+  		<div class="container">
+  			<div class="detail_left">
+  				<div class="detail_left_header">
+  					<h3>Experience</h3>
+  				</div>
+  				<div class="item">
+  					<div class="year">
+  						<h5>2016</h5>
+  					</div>
+  					<div class="event">
+  						<h4>wistron</h4>
+  						<p>nodejs+unity3D+c#</p>
+  					</div>
+  				</div>
+  				<div class="item">
+  					<div class="year">
+  						<h5>2015</h5>
+  					</div>
+  					<div class="event">
+  						<h4>wistron</h4>
+  						<p>nodejs+unity3D+c#</p>
+  					</div>
+  				</div>
+  				<div class="item">
+  					<div class="year">
+  						<h5>2014</h5>
+  					</div>
+  					<div class="event">
+  						<h4>wistron</h4>
+  						<p>nodejs+unity3D+c#</p>
+  					</div>
+  				</div>
+  			</div>
+  			<div class="detail_right">
+  				<div class="detail_right_header">
+  					<h3>Result</h3>
+  					<div class="item">
+  					<div class="year">
+  						<h5>2016</h5>
+  					</div>
+  					<div class="get">
+  						<h4>wistron</h4>
+  						<p>nodejs+unity3D+c#</p>
+  					</div>
+  				</div>
+  				<div class="item">
+  					<div class="year">
+  						<h5>2015</h5>
+  					</div>
+  					<div class="get">
+  						<h4>wistron</h4>
+  						<p>nodejs+unity3D+c#</p>
+  					</div>
+  				</div>
+  				<div class="item">
+  					<div class="year">
+  						<h5>2014</h5>
+  					</div>
+  					<div class="get">
+  						<h4>wistron</h4>
+  						<p>nodejs+unity3D+c#</p>
+  					</div>
+  				</div>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </div>
   <div class="skill"></div>
   <div class="article"></div>
   <div class="contact"></div>
