--- a/index.html
+++ b/index.html
@@ -147,9 +147,148 @@
   		</div>
   	</div>
   </div>
-  <div class="skill"></div>
-  <div class="article"></div>
-  <div class="contact"></div>
-  <div class="footer"></div>
+  <div class="skill">
+  	<div class="container">
+  		<div class="skill_info">
+  			<h3>SKILL</h3>
+  			<span>  </span>
+  			<div class="skill_list">
+  				<div class="ablity">
+  					<h4>JS</h4>
+  					<div class="progress" style="width: 60%"></div>
+  				</div>
+  				<div class="ablity">
+  					<h4>NODEJS</h4>
+  					<div class="progress" style="width: 40%"></div>
+  				</div>
+  				<div class="ablity">
+  					<h4>JAVA</h4>
+  					<div class="progress" style="width: 50%"></div>
+  				</div>
+  				<div class="ablity">
+  					<h4>UNITY3D</h4>
+  					<div class="progress" style="width: 35%"></div>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+  <div class="article">
+  	<div class="container">
+  		<div class="article_info">
+  			<h3>ARTICLE</h3>
+  			<span></span>
+  		</div>
+  		<div class="gallery_list">
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  			<div class="gallery">
+  			  <a href="images/img11.jpg">
+  			    <img src="images/img11.jpg" alt="">
+  			    <div class="wrapper">
+  			    	<span><img src="images/e.png" alt=""></span>
+  			    </div>
+  			  </a>
+  			</div>
+  		</div>
+  	</div>
+  </div>
+  <div class="contact">
+  	<div class="container">
+  		<div class="contact_info">
+  			<h3>CONTACT</h3>
+  			<span></span>
+  		</div>
+  		<div class="contact_way">
+  		  <div class="contact_left">
+  		  	<h3>Say HI to me</h3>
+  		  	<ul>
+  		  		<li>welcome happy funny meet</li>
+  		  		<li>+15527487079</li>
+  		  		<li>958173292@qq.com</li>
+  		  		<li>
+  		  			<a href="https://azirchen.github.io/TEST01/">https://azirchen.github.io/TEST01/</a>
+  		  		</li>
+  		  	</ul>
+  		  </div>
+  		  <div class="contact_right">
+  		  	<h3>Drop me a line</h3>
+  		  	<form action="">
+  		  		<input type="text" value="Name" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Name';}" required="">
+					<input type="text" value="E-mail" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'E-mail';}" required="">
+					<textarea type="text" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Message';}" required="">Message</textarea>
+					<input type="submitSend" value="SEND" class="send">
+  		  	</form>
+  		  </div>
+  		</div>
+  	</div>
+  </div>
+  <div class="footer">
+  	<div class="container">
+  		<p>Copyright &copy; 2015.Company name All rights reserved.More Templates </p>
+  	</div>
+  </div>
 </body>
 </html>
