--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Mungo Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+	<!-- <meta name="keywords" content="Mungo Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" /> -->
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- //for-mobile-apps -->
 
@@ -69,7 +69,7 @@
   		<div class="left_text">
   			<h3>AZIR CHEN</h3>
   			<span>小羊不在太平洋</span>
-  			<p>Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile. </p>
+  			<p> .Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile. </p>
   			<p>Everyone should take action with a dream and be strong with a reason . If the heart has no place to perch on, you will always be a drifter no matter where you are.</p>
   		</div>
   		<div class="right_img">
