--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
   		<div class="left_text">
   			<h3>AZIR CHEN</h3>
   			<span>小羊不在太平洋</span>
-  			<p> .Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile. </p>
+  			<p> <img id="img01" src="images/cat1.jpg" alt="" title="Born to be proud">.Never frown, even when you are sad, because you never know who is falling in love with your smile.Never frown, even when you are sad, because you never know who is falling in love with your smile. </p>
   			<p>Everyone should take action with a dream and be strong with a reason . If the heart has no place to perch on, you will always be a drifter no matter where you are.</p>
   		</div>
-  		<div class="right_img">
+<!--   		<div class="right_img">
   			<a href="#">
   				<img src="images/cat1.jpg" alt="" title="Born to be proud">
   			</a>
-  		</div>
+  		</div> -->
   	</div>
   	<div class="detail">
   		<div class="container">
