--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
       });
     });
   </script>
+  <script>
+    $(window).scroll(function(){
+      var wintop = $(window).scrollTop(), docheight = 
+    
+    $(document).height(), winheight = $(window).height();
+      var scrolled = (wintop/(docheight-winheight))*100;
+  
+        $('.scroll-line').css('width', (scrolled + '%'));
+});
+  </script>
 <!-- //start-smoth-scrolling -->
 </head>
 <body>
